Theoretically working deployment processes